# ceeduko

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
Solver/: 9x9_empty_board_solved.txt  CMakeLists.txt  main.cpp  test.txt  test_solved.txt
Solver.xcodeproj/: project.pbxproj
Solver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Solver.xcodeproj/project.xcworkspace/xcuserdata/tom.xcuserdatad/: UserInterfaceState.xcuserstate
Solver.xcodeproj/xcuserdata/tom.xcuserdatad/xcschemes/: Solver.xcscheme  UnitTests.xcscheme  xcschememanagement.plist
Solver.xcodeproj/xcuserdata/tstainer.xcuserdatad/xcschemes/: Solver.xcscheme  xcschememanagement.plist
Solver/api/: IBlock.h  ICell.h  IClearable.h  IDrawable.h  IGrid.h  IRow.h  ISerializable.h  ISolver.h  IValidatable.h
Solver/boards/: 16x16_empty_board.txt  16x16_partial_board.txt  4x4_empty_board.txt  4x4_partial_board_solved.txt  9x9_empty_board.txt  9x9_partial_board.txt  9x9_unsolvable_board.txt  9x9_unsolvable_board_solved.txt
Solver/factory/: CellFactory.h  Factory.cpp  Factory.h  GridFactory.h  SolverFactory.cpp  SolverFactory.h
Solver/implementation/: BacktrackingSolver.cpp  BacktrackingSolver.h  Cell.cpp  Cell.h  CellChecker.cpp  CellChecker.h  Grid.cpp  Grid.h  GridOperation.h  Serialization.cpp
Solver/logic/: Block.cpp  Block.h  Cell.cpp  Cell.h  Row.cpp  Row.h
Solver/test/: input.io  input_filled.io
Solver/utils/: Defs.h  GeneralException.h  Types.h
UnitTests/tests/: Assertions.h  CellCheckerTester.h  CellCheckerUnitTests.cpp  CellInvalidTester.h  CellTester.h  CellUnitTest.cpp  GeneralGridTester.h  GridUnitTests.cpp  ITester.h  ITwoCaseTester.h  SquareGridTester.h  UnitTestUtils.cpp  UnitTestUtils.h
UnitTests/tests/files/: grid_filled_test1.txt  grid_partially_filled_test2.txt
boards/: 100x100_empty.board  16x16_empty.board.solved  16x16_partial.board.solved  36x36_empty.board  36x36_empty.board.solved  4x4_partial.board  9x9_partial.board.solved
source/: CMakeLists.txt  main.cpp
source/api/: ICell.h  IClearable.h  IGrid.h  ISerializable.h  ISolver.h  IValidatable.h
source/boards/: 4x4_empty_board_solved.txt  9x9_partial_board_solved.txt
source/cli/: CMakeLists.txt  main.cpp
source/factory/: CMakeLists.txt  CellFactory.cpp  CellFactory.h  GridFactory.cpp  GridFactory.h  SolverFactory.cpp  SolverFactory.h
source/implementation/: BacktrackingSolver.cpp  BacktrackingSolver.h  BasicAccessor.h  CMakeLists.txt  Cell.cpp  Cell.h  CellChecker.cpp  CellChecker.h  Grid.cpp  Grid.h  Serialization.h
source/implementation/solvers/: BacktrackingSolver.cpp  BacktrackingSolver.h  ImprovedBacktrackingSolver.cpp  ImprovedBacktrackingSolver.h
source/io/: FileIO.h  Serializer.h
source/programs/: CMakeLists.txt  main.cpp
source/py/: CMakeLists.txt  api.cpp
source/utils/: Definitions.h  Exceptions.h  GeneralException.h  Types.h
testing/: CMakeLists.txt  main.cpp
testing/tests/: CellUnitTest.cpp  UnitTestUtils.cpp  UnitTestUtils.h
testing/tests/files/: input.io
testing/unittests/: Assertions.h  BasicAccessorUnitTests.cpp  CellCheckerTester.h  CellInvalidTester.h  CellTester.h  CellUnitTest.cpp  GeneralGridTester.h  UnitTestUtils.cpp
